--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -1,34 +1,4 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-/* Add font imports */
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap");
-
-/* Custom CSS for HomepageHeader component */
-.container h1 {
-  font-family: "Space Grotesk", sans-serif;
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 1.2;
-  color: #333; /* Add your desired color for h1 */
-}
-
-.container p {
-  font-family: "DM Sans", sans-serif;
-  font-weight: 700;
-  width: 95%;
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  font-size: clamp(12px, 3vw, 1rem);
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #555; /* Add your desired color for p */
-}
 
 .heroBanner {
   padding: 4rem 0 0px 0;
@@ -40,7 +10,6 @@
   background: transparent;
   opacity: 0; /* Initially set the opacity to 0 to hide the content */
   animation: fadeIn 1s ease-in-out forwards; /* Apply the animation */
-  /* border: 1px solid red; */
 }
 
 .mainFeature {
@@ -49,17 +18,16 @@
 }
 
 .heroTitle {
-  font-family: "Space Grotesk,sans-serif";
+  font-family: 'Space Grotesk',sans-serif;
   font-weight: 700;
   font-size: 4rem;
-  font-weight: 700;
   line-height: 1.2;
 }
 
 .contentTitle {
-  font-weight: 800;
-  font-size: 1.5rem;
+  font-family: 'Space Grotesk',sans-serif;
   font-weight: 700;
+  font-size: 3rem;
   line-height: 1;
   text-align: center;
 }
@@ -70,13 +38,11 @@
   margin: auto;
   margin-top: 20px;
   margin-bottom: 30px;
-  /* color: rgba(0, 0, 0, 0.5); */
   font-size: clamp(12px, 3vw, 1rem);
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid black; */
 }
 
 .heroDescription {
@@ -85,7 +51,6 @@
   margin: auto;
   margin-top: 20px;
   margin-bottom: 30px;
-  /* color: rgba(0, 0, 0, 0.5); */
   font-size: clamp(12px, 3vw, 1rem);
 }
 
@@ -119,23 +84,19 @@
 }
 
 .homepageContent {
-  /* border: 1px solid black; */
   margin-top: 190px;
 }
 
 .homepageDetails {
-  /* border: 1px solid black; */
   margin-top: 70px;
 }
 
 .flowLogo {
   width: 80%;
   height: 100%;
-  /* border: 1px solid black; */
 }
 
 .contentFlow {
-  /* display: flex; */
   margin-top: 50px;
 }
 
@@ -159,7 +120,6 @@
 }
 
 .contentspace {
-  /* border: 1px solid black; */
   width: 70%;
   display: flex;
   align-items: center;
@@ -167,7 +127,6 @@
 }
 
 .contentspacedata {
-  /* border: 1px solid black; */
   width: 70%;
   display: flex;
   align-items: center;
@@ -177,7 +136,6 @@
 .animatefadein,
 .contentpara {
   width: 50%;
-  /* border: 1px solid black; */
   max-width: 1000px;
   opacity: 0; /* Initially set the opacity to 0 to hide the content */
   animation: fadeIn 1s ease-in-out forwards; /* Apply the animation */
