--- a/docs/src/components/NavbarItems/getstart.css
+++ b/docs/src/components/NavbarItems/getstart.css
@@ -1,12 +1,15 @@
 .get-button {
-    background-color: #6356e5;
-    border: 1px solid #6356e5;
-    border-radius: 6px;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    transition: all 0.2s;
-    display: flex;
-    grid-column-gap: 1rem;
-    font-weight: 600;
+  /* background-color: #6356e5; */
+  /* border: 1px solid #6356e5; */
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  transition: all 0.2s;
+  display: flex;
+  grid-column-gap: 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.25;
+  margin-right: 15px;
 }
