--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -24,6 +24,13 @@
   line-height: 1.2;
 }
 
+.highlight {
+  background: linear-gradient(to right, rgba(255, 222, 226, 0), #e3ebfc);
+  width: fit-content;
+  display: inline-block;
+  margin-left: 5px;
+}
+
 .contentTitle {
   font-family: "Space Grotesk", sans-serif;
   font-weight: 700;
@@ -65,6 +72,7 @@
   /* padding: 0rem 1.5rem; */
   transition: all 0.2s;
   display: flex;
+  font-weight: 500;
 }
 
 /* Style for the "Read docs" button */
@@ -80,6 +88,7 @@
   display: flex;
   color: #000; /* Text color for the button */
   text-decoration: none; /* Remove underlines for text links */
+  font-weight: 500;
 }
 
 .readDocsButton:hover {
@@ -137,9 +146,45 @@
   margin-bottom: 0;
 }
 
+.learnmore {
+  background-color: #fff;
+  border-radius: 6px;
+  grid-column-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  transition: all 0.2s;
+  display: flex;
+  margin-top: 30px;
+  width: 35%;
+  cursor: pointer;
+}
+
+.learnmoretitle {
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 1.2;
+  font-family: "DM Sans", sans-serif !important;
+}
+
+.learnmore:hover {
+  background-color: #ebebeb;
+}
+
 .connectcontainer {
   display: flex;
   margin: 50px 0;
+}
+
+.contentsubheading {
+  color: #3627de;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  font-family: Space, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1.3;
+  padding: 20px 0;
 }
 
 .contentspace {
@@ -520,12 +565,18 @@ html {
   .buttons {
     display: flex;
     flex-direction: column;
-    gap:15px;
-  } 
+    gap: 15px;
+  }
 
-  .heroButton, .readDocsButton {
+  .heroButton,
+  .readDocsButton {
     width: 100%;
-    padding: calc( var(--ifm-button-padding-vertical) * var(--ifm-button-size-multiplier) ) calc( var(--ifm-button-padding-horizontal) * var(--ifm-button-size-multiplier) );
+    padding: calc(
+        var(--ifm-button-padding-vertical) * var(--ifm-button-size-multiplier)
+      )
+      calc(
+        var(--ifm-button-padding-horizontal) * var(--ifm-button-size-multiplier)
+      );
   }
 
   .contentTitle {
@@ -549,7 +600,7 @@ html {
   .contentHeading {
     font-size: 1.75rem;
   }
-  
+
   .contentFlow {
     padding: 10px;
     margin-top: 30px;
