--- a/docs/src/components/HomepageDetails/styles.modules.css
+++ b/docs/src/components/HomepageDetails/styles.modules.css
@@ -11,9 +11,21 @@
 .contentTitle {
   font-family: "Space Grotesk", sans-serif;
   font-weight: 700;
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 4rem;
+  line-height: 1.2;
   text-align: center;
+}
+
+.highlight {
+  background-image: url('../../../static/img/background_arrow.png');
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: auto;
+  padding: 10px 20px 10px 10px;
+}
+
+html[data-theme="dark"] .highlight {
+ background: none;
 }
 
 .fadeinonscroll {
