--- a/docs/src/components/NavbarItems/getstart.css
+++ b/docs/src/components/NavbarItems/getstart.css
@@ -10,6 +10,6 @@
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.25;
-  margin-right: 15px;
+  margin:0 5px;
   font-family: sans-serif;
 }
