--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -12,11 +12,6 @@
   animation: fadeIn 1s ease-in-out forwards; /* Apply the animation */
 }
 
-.mainFeature {
-  opacity: 0; /* Initially set the opacity to 0 to hide the content */
-  animation: fadeIn 1s ease-in-out forwards; /* Apply the animation */
-}
-
 .heroTitle {
   font-family: "Space Grotesk", sans-serif;
   font-weight: 700;
@@ -25,19 +20,24 @@
 }
 
 .highlight {
-  background: linear-gradient(to right, rgba(255, 222, 226, 0), #e3ebfc);
-  width: fit-content;
-  display: inline-block;
-  margin-left: 5px;
+  background-image: url('../../static/img/background_arrow.png');
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: auto;
+  padding: 10px 20px 10px 10px;
 }
 
 .contentTitle {
   font-family: "Space Grotesk", sans-serif;
   font-weight: 700;
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 4rem;
+  line-height: 1.2;
   text-align: center;
 }
+
+html[data-theme="dark"] .highlight {
+  background: none;
+ }
 
 .contentDescription {
   font-weight: 500;
@@ -69,10 +69,12 @@
   border-radius: 6px;
   justify-content: center;
   align-items: center;
-  /* padding: 0rem 1.5rem; */
+  padding: 0.65rem 2rem;
   transition: all 0.2s;
   display: flex;
   font-weight: 500;
+  font-family: sans-serif;
+  font-size: 1rem;
 }
 
 /* Style for the "Read docs" button */
@@ -83,12 +85,14 @@
   border-radius: 6px;
   justify-content: center;
   align-items: center;
-  /* padding: 1rem 1.5rem; */
+  padding: 0.65rem 2rem;
   transition: all 0.2s;
   display: flex;
   color: #000; /* Text color for the button */
   text-decoration: none; /* Remove underlines for text links */
   font-weight: 500;
+  font-family: sans-serif;
+  font-size: 1rem;
 }
 
 .readDocsButton:hover {
@@ -158,6 +162,7 @@
   margin-top: 30px;
   width: 35%;
   cursor: pointer;
+  color: #000;
 }
 
 .learnmoretitle {
@@ -350,6 +355,7 @@ html {
   padding: 10px; /* Add padding for better spacing */
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .contentspace {
@@ -359,9 +365,13 @@ html {
 }
 
 .imagespace img {
-  /* Set the image to take 100% of the container width */
   width: 80%;
-  /* Optionally, you can set a maximum height for the image to control its aspect ratio */
+  max-height: 300px;
+  height: 300px;
+}
+
+.contentspace img {
+  width: 90%;
   max-height: 300px;
   height: 300px;
 }
@@ -397,7 +407,7 @@ html {
 
   .bubble3 {
     left: -140px;
-    bottom: -120px;
+    bottom: -65px;
   }
 
   .bubble4 {
