Added Calendly integration.

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -79,5 +79,42 @@ html[data-theme="dark"] .navbar__link {
   .navbar__item--hideOnMobile {
     display: none;
   }
+
+  .iframe-calendly-popup {
+    width: 100% !important;
+  }
 }
 
+.iframe-calendly-popup {
+  width: 800px;
+}
+
+/* Add styles for the overlay */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Add styles for the pop-up container */
+.popup-container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.cancel-button {
+  display: flex;
+  width: 100%;
+  justify-content: end;
+  cursor: pointer;
+  font-size: 20px;
+}
